syntax = "proto3";
package broker.v1;
option go_package = "github.com/textileio/broker-core/gen/broker/v1;broker";

import "google/protobuf/timestamp.proto";  

message CreateBrokerRequestRequest {
  string cid = 1;
  BrokerRequestMetadata meta = 2;
}

message BrokerRequestMetadata {
    string region = 1;
}

message CreateBrokerRequestResponse {
  BrokerRequest request = 1;
}

message GetBrokerRequestRequest {
  string id = 1;
}

message GetBrokerRequestResponse {
  BrokerRequest broker_request = 1;
}


// General
message BrokerRequest {
  string id = 1;
  string data_cid = 2;
  BrokerRequestStatus status = 3;
  BrokerRequestMetadata meta = 4;
  string storage_deal_id = 5;
  google.protobuf.Timestamp created_at = 6; 
  google.protobuf.Timestamp updated_at = 7; 
}


enum BrokerRequestStatus {
  UNSPECIFIED = 0;
  BATCHING = 1;
  PREPARING = 2;
  AUCTIONING = 3;
  DEALMAKING = 4;
  SUCCESS = 5;
}
  
service APIService {
  rpc CreateBrokerRequest(CreateBrokerRequestRequest) returns (CreateBrokerRequestResponse) {}
  rpc GetBrokerRequest(GetBrokerRequestRequest) returns (GetBrokerRequestResponse) {}
}


